--- a/jjl/index.html
+++ b/jjl/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
-    <title>国庆集结令</title>
+    <title>集结令</title>
   </head>
   <body>
     <div id="app"></div>
